@@ -7,6 +7,9 @@
 	* t/PangoCairo.t, xs/PangoCairo.xs: Also allow using method
 	calling semantics for pango_cairo_context_*.
 
+	* t/GdkVisual.t, t/GtkIconView.t, t/GtkRecentChooser.t,
+	t/GtkRecentManager.t: Fix test failures.
+
 2006-11-08	kaffeetisch
 
 	Merge from HEAD:
